<resources>
    <string name="app_name">Felicitacion</string>
    <string name="MeriKurisumasu">そして　良いお年を！</string>
    <string name="soshiteyoiotoshio">メリークリスマス！</string>
    <string name="personajes">personajes</string>
    <string name="colorfondo">colorFondo</string>
    <string name="furi1">よ</string>
    <string name="furi2">とし</string>
    <string name="botonmain">Furigana</string>
    <string name="empresa">Aplicaciones Kaienu</string>
    <string name="cargando">Cargando</string>
</resources>
