<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/colorfondo"
        app:srcCompat="@android:color/holo_red_light" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/personajes"
        app:srcCompat="@drawable/photo46c7cfbtrans" />

    <TextView
        android:id="@+id/titulo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="83dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/MeriKurisumasu"
        android:textColor="@color/japFontColor"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/titulo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="17dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/soshiteyoiotoshio"
        android:textColor="@color/japFontColor"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/furigana1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/titulo2"
        android:layout_alignTop="@+id/titulo2"
        android:layout_marginStart="139dp"
        android:layout_marginTop="-19dp"
        android:text="@string/furi1"
        android:textColor="@color/japFontColor" />

    <TextView
        android:id="@+id/furigana2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/titulo2"
        android:layout_alignTop="@+id/titulo2"
        android:layout_marginStart="231dp"
        android:layout_marginTop="-19dp"
        android:text="@string/furi2"
        android:textColor="@color/japFontColor" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/botonmain" />

</RelativeLayout>